BST: remove unused bstprocedure.*
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -32,7 +32,7 @@ beast_headers = $(strip \
 	bstsnifferscope.hh	bstwaveview.hh	bstfiledialog.hh		bstgconfig.hh	    \
 	bstlogadjustment.hh	bstitemview.hh	bstservermonitor.hh	bstknob.hh	    \
 	bstparamview.hh		bstmenus.hh	bstparam.hh		bstpartdialog.hh	    \
-	bstqsampler.hh		bstpreferences.hh	bstprocedure.hh	bstsequence.hh	    	\
+	bstqsampler.hh		bstpreferences.hh			bstsequence.hh	    	\
 	bstsnetrouter.hh		bstsplash.hh	bsttrackview.hh		bstsupershell.hh	    \
 	bstusermessage.hh	bstdial.hh	bsttracksynthdialog.hh	bstwaveeditor.hh	    \
 	bstzoomedwindow.hh	bstskinconfig.hh	bstmsgabsorb.hh		bstsampleeditor.hh   \
@@ -53,7 +53,7 @@ bst_cc_sources = $(strip \
 	bstsnifferscope.cc	bstwaveview.cc	bstfiledialog.cc	bstgconfig.cc	    \
 	bstlogadjustment.cc	bstitemview.cc	bstservermonitor.cc	bstknob.cc	    \
 	bstparamview.cc		bstmenus.cc	bstparam.cc		bstpartdialog.cc    \
-	bstqsampler.cc	      bstpreferences.cc	bstprocedure.cc		bstsequence.cc	    \
+	bstqsampler.cc	      bstpreferences.cc				bstsequence.cc	    \
 	bstsnetrouter.cc	bstsplash.cc	bsttrackview.cc		bstsupershell.cc    \
 	bstusermessage.cc	bstdial.cc	bsttracksynthdialog.cc	bstwaveeditor.cc    \
 	bstzoomedwindow.cc     bstskinconfig.cc	bstmsgabsorb.cc		bstsampleeditor.cc  \
