TESTS: move tests/suite1 into tests/Makefile.sub
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -215,3 +215,6 @@ am__CONFIG_DISTCLEAN_FILES = 	\
 	config\.cache		\
 	configure\.lineno	\
 	config\.status\.lineno
+
+# == tests/ ==
+include tests/Makefile.sub
