TESTS: move tests/testresamplerq into tests/Makefile.sub
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/tests/Makefile.sub
+++ b/tests/Makefile.sub
@@ -30,8 +30,8 @@ installcheck-local: installcheck-tests
 
 # == suite1 ==
 NOINST_TESTS         += tests/suite1
-tests_suite1_LDADD    = sfi/libsfi-@MAJOR@.la $(LIBBSE_LIBS)
 tests_suite1_CXXFLAGS = $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS)
+tests_suite1_LDADD    = sfi/libsfi-@MAJOR@.la $(LIBBSE_LIBS)
 tests_suite1_SOURCES = \
 	tests/suite1-main.cc \
 	tests/suite1-randomhash.cc
@@ -40,6 +40,13 @@ tests_suite1_SOURCES = \
 NOINST_TESTS                += tests/testwavechunk
 SLOWTESTS                   += tests/testwavechunk
 tests_testwavechunk_CXXFLAGS = $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS)
+tests_testwavechunk_LDADD    = bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
 tests_testwavechunk_SOURCES  = \
 	tests/testwavechunk.cc
-tests_testwavechunk_LDADD    = bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
+
+# == testresamplerq ==
+NOINST_TESTS		     += tests/testresamplerq
+tests_testresamplerq_CXXFLAGS = $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS)
+tests_testresamplerq_LDADD    = bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
+tests_testresamplerq_SOURCES  = \
+	tests/testresamplerq.cc
