--- a/tests/Makefile.sub
+++ b/tests/Makefile.sub
@@ -198,7 +198,7 @@ TESTS_BSEFILE_CHECK_LOAD = $(strip				\
 	  check-load						\
 	  --bse-pcm-driver null=nosleep				\
 	  --bse-midi-driver null				\
-	  --bse-override-sample-path '$(top_srcdir)/tests/audio:$(top_srcdir)/library/samples' \
+	  --bse-override-sample-path '$(top_srcdir)/af-tests:$(top_srcdir)/library/samples' \
 	  --bse-override-plugin-globs '$(top_builddir)/plugins/.libs/*.so:$(top_builddir)/plugins/freeverb/.libs/*.so' \
 	  --bse-rcfile "/dev/null" )
 tests/bsefile-checklist-%-test: tests/bsefile-checklist
