--- a/aidacc/tests/Makefile.sub
+++ b/aidacc/tests/Makefile.sub
@@ -75,11 +75,21 @@ aidacc/tests/t305-testpass-compile: aidacc/tests/t301-pass.idl aidacc/tests/t301
 	$(Q) sed -e '1i#include "t305-inc2_handles.cc"' \
 		 -e '1i#include "t305-inc1_handles.cc"' \
 		 -e '1i#define _(x) x' -i aidacc/tests/t305-pass_handles.cc
-	$(Q) $(CXXCOMPILE) $(CXXFLAGS) aidacc/tests/t305-pass_interfaces.cc -c
-	$(Q) $(CXXCOMPILE) $(CXXFLAGS) aidacc/tests/t305-pass_handles.cc -c
-AIDACC_TESTS_CLEANFILES += t305-inc1_interfaces.hh t305-inc1_interfaces.cc t305-inc1_handles.hh t305-inc1_handles.cc
-AIDACC_TESTS_CLEANFILES += t305-inc2_interfaces.hh t305-inc2_interfaces.cc t305-inc2_handles.hh t305-inc2_handles.cc
-AIDACC_TESTS_CLEANFILES += t305-pass_interfaces.hh t305-pass_interfaces.cc t305-pass_handles.hh t305-pass_handles.cc
+	$(Q) cd aidacc/tests/ && $(CXXCOMPILE) $(CXXFLAGS) -I../.. t305-pass_interfaces.cc -c
+	$(Q) cd aidacc/tests/ && $(CXXCOMPILE) $(CXXFLAGS) -I../.. t305-pass_handles.cc -c
+AIDACC_TESTS_CLEANFILES += \
+	aidacc/tests/t305-inc1_interfaces.hh	\
+	aidacc/tests/t305-inc1_interfaces.cc	\
+	aidacc/tests/t305-inc1_handles.hh	\
+	aidacc/tests/t305-inc1_handles.cc	\
+	aidacc/tests/t305-inc2_interfaces.hh	\
+	aidacc/tests/t305-inc2_interfaces.cc	\
+	aidacc/tests/t305-inc2_handles.hh	\
+	aidacc/tests/t305-inc2_handles.cc	\
+	aidacc/tests/t305-pass_interfaces.hh	\
+	aidacc/tests/t305-pass_interfaces.cc	\
+	aidacc/tests/t305-pass_handles.hh	\
+	aidacc/tests/t305-pass_handles.cc
 t305-testpass-compile-test: aidacc/tests/t305-testpass-compile
 aidacc_tests_checktargets += t305-testpass-compile-test
 
