--- a/aidacc/tests/Makefile.sub
+++ b/aidacc/tests/Makefile.sub
@@ -1,23 +1,22 @@
 # This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
-aidacc_tests_checktargets =
+aidacc_tests_checkrules   =
 aidacc_tests_binaries     =
-
-# == clean-aidacc-tests ==
-clean-aidacc-tests:
-	rm -f $(AIDACC_TESTS_CLEANFILES) aidacc/tests/*.$(OBJEXT)
-clean: clean-aidacc-tests
-.PHONY: clean-aidacc-tests
+AIDACC_TESTS_CLEANFILES   =
+noinst_PROGRAMS          += $(aidacc_tests_binaries)
 
 # == t201-basics ==
-aidacc_tests_binaries += t201-basics
-AIDACC_TESTS_CLEANFILES += aidacc/tests/t201-basics.o
+aidacc_tests_binaries           += aidacc/tests/t201-basics
+aidacc_tests_t201_basics_LDADD   = $(LIBBSE_LIBS)
+aidacc_tests_t201_basics_SOURCES = 	\
+	aidacc/aida.cc			\
+	aidacc/tests/t201-basics.cc
 
 # == t301-testpass-idl-test ==
 t301-testpass-idl-test: aidacc/tests/t301-pass.idl $(AIDACC)
 	$(QTEST)
 	$(Q) $(AIDACC) $< # --aida-debug $<
-aidacc_tests_checktargets += t301-testpass-idl-test
+aidacc_tests_checkrules += t301-testpass-idl-test
 
 # == t302-testfail-idl-test ==
 t302-testfail-idl-test: aidacc/tests/t302-fail.idl aidacc/tests/t302-fail.ref $(AIDACC)
@@ -25,14 +24,17 @@ t302-testfail-idl-test: aidacc/tests/t302-fail.idl aidacc/tests/t302-fail.ref $(
 	$(Q) $(AIDACC) --aida-fail-file-test $<> $@.out
 	$(Q) sed 's/\(:[0-9]\+:[0-9]\+: Trying to find one of \).*/\1.../' < $@.out > $@.notokens && mv $@.notokens $@.out
 	$(Q) diff -up aidacc/tests/t302-fail.ref $@.out && rm -f $@.out
-aidacc_tests_checktargets += t302-testfail-idl-test
+aidacc_tests_checkrules += t302-testfail-idl-test
 
 # == t303-explore ==
-aidacc_tests_binaries += t303-explore
+aidacc_tests_binaries            += aidacc/tests/t303-explore
+aidacc_tests_t303_explore_SOURCES =	\
+	aidacc/aida.cc			\
+	aidacc/tests/t303-explore.cc
 tests_t303_generated                 =      	\
 	aidacc/tests/t303-explore_interfaces.hh	\
 	aidacc/tests/t303-explore_interfaces.cc	\
-        aidacc/tests/t303-explore_handles.hh		\
+        aidacc/tests/t303-explore_handles.hh	\
         aidacc/tests/t303-explore_handles.cc
 # MAKE(1) supports parallel execution of a multiple-targets-rule *only* for implicit rules (with '%')
 aidacc/tests/t303-%_interfaces.hh aidacc/tests/t303-%_interfaces.cc aidacc/tests/t303-%_handles.hh aidacc/tests/t303-%_handles.cc: aidacc/tests/t303-%.idl $(AIDACC_CXXSTUB_PY) $(AIDACC)
@@ -55,7 +57,7 @@ aidacc/tests/t304-testpass-cxx: aidacc/tests/t301-pass.idl aidacc/tests/t304-cxx
 	$(Q) diff -up aidacc/tests/t304-cxxserver.ref aidacc/tests/t304-testpass_interfaces.hh && rm -f aidacc/tests/t304-testpass_interfaces.hh
 	$(Q) diff -up aidacc/tests/t304-cxxclient.ref aidacc/tests/t304-testpass_handles.hh && rm -f aidacc/tests/t304-testpass_handles.hh
 t304-testpass-cxx-test: aidacc/tests/t304-testpass-cxx
-aidacc_tests_checktargets += t304-testpass-cxx-test
+aidacc_tests_checkrules += t304-testpass-cxx-test
 
 # == t305-testpass-compile-test ==
 aidacc/tests/t305-testpass-compile: aidacc/tests/t301-pass.idl aidacc/tests/t301-inc2.idl aidacc/tests/t301-inc1.idl $(AIDACC)
@@ -91,28 +93,26 @@ AIDACC_TESTS_CLEANFILES += \
 	aidacc/tests/t305-pass_handles.hh	\
 	aidacc/tests/t305-pass_handles.cc
 t305-testpass-compile-test: aidacc/tests/t305-testpass-compile
-aidacc_tests_checktargets += t305-testpass-compile-test
+aidacc_tests_checkrules += t305-testpass-compile-test
 
 # == t204-aidatests.cc ==
-aidacc_tests_binaries += t204-aidatests
-AIDACC_TESTS_CLEANFILES += aidacc/tests/t204-aidatests.o
+aidacc_tests_binaries += aidacc/tests/t204-aidatests
+aidacc_tests_t204_aidatests_SOURCES =	\
+	aidacc/aida.cc			\
+	aidacc/tests/t204-aidatests.cc
 
-# == aidacc_tests_binaries ==
-define tests_run_RULE
-all_targets += aidacc/tests/$(1)
-.PHONY: aidacc/tests/run-$(1)
-$(1)--testexec: aidacc/tests/$(1)
-	@echo '  EXEC    ' $(1)
-	$$(Q) aidacc/tests/$(1)
-aidacc_tests_checktargets += $(1)--testexec
-AIDACC_TESTS_CLEANFILES += aidacc/tests/$(1)
-.PHONY: aidacc/tests/run-$(1)
-endef
-$(foreach PRG,$(aidacc_tests_binaries),$(eval $(call tests_run_RULE,$(PRG))))
-aidacc/tests/%: aidacc/tests/%.o aidacc/aida.o aidacc/tests/testing.hh aidacc/aida.hh
-	$(CXXCOMPILE) $(CXXFLAGS) $< aidacc/aida.o -o $@
+# == clean-aidacc-tests ==
+clean-aidacc-tests:
+	rm -f $(AIDACC_TESTS_CLEANFILES) aidacc/tests/*.$(OBJEXT)
+.PHONY: clean-aidacc-tests
+clean-aidacc: clean-aidacc-tests
 
-# == check-tests ==
-check-tests: $(sort $(aidacc_tests_checktargets))
-check-local: check-tests
-.PHONY: check-tests
+# == check-aidacc-tests ==
+check-aidacc-tests: $(aidacc_tests_checkrules)
+check-aidacc-tests: $(sort $(aidacc_tests_binaries:aidacc/tests/%=check-aidacc-tests-%))
+check-aidacc-tests-PHONY:
+.PHONY: $(aidacc_tests_checkrules) check-aidacc-tests check-aidacc-tests-PHONY
+check-aidacc-tests-%: aidacc/tests/% check-aidacc-tests-PHONY
+	@echo '  EXEC    ' $<
+	$(Q) $<
+check-aidacc: check-aidacc-tests
