--- a/Makefile.decl
+++ b/Makefile.decl
@@ -13,7 +13,8 @@ noinst_DATA=
 
 # == Verbosity ==
 Q       = $(if $(findstring 1, $(V)) ,, @)
-QGEN    = $(Q:@=@echo '  GEN   ' $@; )
+QGEN    = $(Q:@=@echo '  GEN     ' $@; )
+QTEST   = @echo '  TEST    ' $@;
 QSTDERR = $(Q:@=2>/dev/null)
 QSTDOUT = $(Q:@=1>/dev/null)
 QDIE    = bash -c 'echo "  ERROR    $@: $$@" >&2; exit 127' _
